<resources>
    <string name="app_name">Todo MVVM</string>
    <string name="action_settings">Settings</string>


    <string name="main_activity_name">All Tasks</string>
    <string name="add_task_activity_name">Add a New Task</string>

    <!-- Strings for MainActivity -->
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <!-- Strings for AddTaskActivity -->
    <!-- This etaskEntrytask has a unicode character for "..." = "&#8230;" -->
    <string name="edit_task_description">Todo Description&#8230;</string>
    <string name="priority_string">Priority</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Create</string>
    <string name="update_button">Update</string>
    <string name="todo_title">Todo Title</string>
    <string name="todo_time">Todo Time</string>
    <string name="todo_date">Todo Date</string>
    <string name="add_new_todo">Add New Todo</string>
</resources>
